[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/sprites/UI/coin/coin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/coins.gd" type="Script" id=2]
[ext_resource path="res://Assets/sprites/UI/coin/coinAnim.tres" type="Animation" id=3]


[sub_resource type="CircleShape2D" id=1]

[node name="Area2D" type="Area2D"]
position = Vector2( 497.499, 241.539 )
scale = Vector2( 1.06913, 1.15382 )
z_index = 10
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )
spriteSize = 200

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3.60492, -7.62939e-05 )
scale = Vector2( 0.4587, 0.4587 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.75389, 0 )
scale = Vector2( 6.56938, 6.56938 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/coinAnim = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
